traversal.snake.Snake.scala.error
Compilation error:
Snake:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:7: warning: enclosing method positionFinale has result type Unit: return value discarded
      return true
      ^Snake:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:12: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:19: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:19: warning: enclosing method positionFinale has result type Unit: return value discarded
        return true
        ^Snake:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    else return false
                ^Snake:22: warning: enclosing method positionFinale has result type Unit: return value discarded
    else return false
         ^Snake:45: error: value unary_! is not a member of Unit
  while(!positionFinale())
        ^